--- a/src/style/menu.less
+++ b/src/style/menu.less
@@ -1,7 +1,7 @@
 .ant-menu-dark {
   &.ant-menu-inline {
     .ant-menu-item-selected {
-      background-color: #5f5f5f !important;
+      background-color: #2E9841 !important;
     }
   }
 }
